# imdb

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: parse.hpp  redis.hpp  server.hpp  store.hpp  tcp_client.hpp
scripts/: build.sh
src/network/: server.cpp  tcp_client.cpp
src/redis/: parse.cpp  redis.cpp  server.cpp  store.cpp  store.hpp
